--- a/MailSignature/sofia.html
+++ b/MailSignature/sofia.html
@@ -5,97 +5,48 @@
 		<meta charset="UTF-8">
 		<meta name="viewport"
 			content="width=device-width, initial-scale=1.0">
-		<style>
-			@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap');
-
-			.logo {
-				font-weight: 700;
-				font-size: 1.75rem;
-				padding-bottom: 0.5rem;
-				color: orangered;
-				letter-spacing: -0.05em;
-			}
-
-			.name {
-				font-weight: 700;
-				padding-bottom: 1rem;
-			}
-
-			.spacer {
-				padding-bottom: 1rem;
-			}
-
-			.signature {
-				font-family: 'Inter', sans-serif;
-				color: black;
-				border-top: 1px solid black;
-				padding-top: 1rem;
-				margin: 1rem;
-				max-width: fit-content;
-			}
-
-			.signature p {
-				margin: 0;
-			}
-
-			.signature a {
-				color: black;
-				text-decoration: underline;
-				text-decoration-color: orangered;
-			}
-
-			.signature a:hover {
-				cursor: pointer;
-			}
-
-			.par {
-				font-size: 0.75rem;
-				padding-top: 1rem;
-				max-width: 300px;
-				line-height: 1.4;
-			}
-
-			.par p {
-				margin-top: 0.5rem;
-			}
-		</style>
+		<link
+			href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap"
+			rel="stylesheet">
 	</head>
 
 	<body>
-		<div class="signature">
-			<p class="logo">DisciplineDesign</p>
-			<p class="name">Sofia Righetti <span style="font-weight: normal;">|
-					Designer</span></p>
-			<p class="spacer"><a
-					href="https://www.discipline.design">www.discipline.design</a>
+		<div
+			style="font-family: 'Inter', sans-serif; color: black; border-top: 1px solid black; padding-top: 1rem; margin: 1rem; max-width: fit-content;">
+			<p
+				style="margin: 0; font-weight: 700; font-size: 1.75rem; padding-bottom: 0.5rem; color: orangered; letter-spacing: -0.05em;">
+				DisciplineDesign</p>
+			<p style="margin: 0; font-weight: 700; padding-bottom: 1rem;">Sofia
+				Righetti <span style="font-weight: normal;">| Designer</span>
 			</p>
-			<p><a
-					href="mailto:info@discipline.design">sofia@discipline.design</a>
+			<p style="margin: 0; padding-bottom: 1rem;"><a
+					href="https://www.discipline.design"
+					style="color: black; text-decoration: underline; text-decoration-color: orangered; cursor: pointer;">www.discipline.design</a>
 			</p>
-			<p>+39 346 7507187
+			<p style="margin: 0;"><a href="mailto:info@discipline.design"
+					style="color: black; text-decoration: underline; text-decoration-color: orangered; cursor: pointer;">sofia@discipline.design</a>
 			</p>
-			<p class="spacer"></p>
-			<div class="par">
-				<p>Le informazioni trasmesse sono destinate esclusivamente alla
-					persona o entità a cui sono indirizzate e possono contenere
-					materiale riservato.
-				</p>
-				<p>Qualsiasi revisione, ritrasmissione, diffusione o altro uso
-					di
-					tali informazioni, o qualsiasi azione intrapresa sulla base
-					di
-					esse da parte di persone o entità diverse dal destinatario
-					previsto è vietata.
-				</p>
-				<p>Se hai ricevuto questo messaggio per errore, contatta
-					<a
-						href="mailto:info@discipline.design">info@discipline.design</a>
-					e cancella il materiale da qualsiasi
-					computer. Se questa email contiene allegati, assicurati che
-					vengano controllati per virus prima di aprirli.
-				</p>
+			<p style="margin: 0;">+39 346 7507187</p>
+			<p style="margin: 0; padding-bottom: 1rem;"></p>
+			<div
+				style="font-size: 0.75rem; padding-top: 1rem; max-width: 300px; line-height: 1.4;">
+				<p style="margin: 0; margin-top: 0.5rem;">Le informazioni
+					trasmesse sono destinate esclusivamente alla persona o
+					entità a cui sono indirizzate e possono contenere materiale
+					riservato.</p>
+				<p style="margin: 0; margin-top: 0.5rem;">Qualsiasi revisione,
+					ritrasmissione, diffusione o altro uso di tali informazioni,
+					o qualsiasi azione intrapresa sulla base di esse da parte di
+					persone o entità diverse dal destinatario previsto è
+					vietata.</p>
+				<p style="margin: 0; margin-top: 0.5rem;">Se hai ricevuto questo
+					messaggio per errore, contatta <a
+						href="mailto:info@discipline.design"
+						style="color: black; text-decoration: underline; text-decoration-color: orangered; cursor: pointer;">info@discipline.design</a>
+					e cancella il materiale da qualsiasi computer. Se questa
+					email contiene allegati, assicurati che vengano controllati
+					per virus prima di aprirli.</p>
 			</div>
-
 		</div>
 	</body>
 
