Update HTML structure and styles; modify text content for clarity; refactor components for consistency

--- a/MailSignature/sofia.html
+++ b/MailSignature/sofia.html
@@ -28,6 +28,7 @@
 			</p>
 			<p style="margin: 0;">+39 346 7507187</p>
 			<p style="margin: 0; padding-bottom: 1rem;"></p>
+			<p style="">Di base a Verona, online ovunque.</p>
 			<div
 				style="font-size: 0.75rem; padding-top: 1rem; max-width: 300px; line-height: 1.4;">
 				<p style="margin: 0; margin-top: 0.5rem;">Le informazioni
