Remove old MailSignature file and add new signature for Tobia Scapin

--- a/MailSignature/tobias.html
+++ b/MailSignature/tobias.html
@@ -16,17 +16,18 @@
 			<p
 				style="margin: 0; font-weight: 700; font-size: 1.75rem; padding-bottom: 0.5rem; color: orangered; letter-spacing: -0.05em;">
 				DisciplineDesign</p>
-			<p style="margin: 0; font-weight: 700; padding-bottom: 1rem;">Sofia
-				Righetti <span style="font-weight: normal;">| Designer</span>
+			<p style="margin: 0; font-weight: 700; padding-bottom: 1rem;">Tobia
+				Scapin <span style="font-weight: normal;">| Head of Product &
+					Service Design</span>
 			</p>
 			<p style="margin: 0; padding-bottom: 1rem;"><a
 					href="https://www.discipline.design"
 					style="color: black; text-decoration: underline; text-decoration-color: orangered; cursor: pointer;">www.discipline.design</a>
 			</p>
-			<p style="margin: 0;"><a href="mailto:info@discipline.design"
-					style="color: black; text-decoration: underline; text-decoration-color: orangered; cursor: pointer;">sofia@discipline.design</a>
+			<p style="margin: 0;"><a href="mailto:tobias@discipline.design"
+					style="color: black; text-decoration: underline; text-decoration-color: orangered; cursor: pointer;">tobias@discipline.design</a>
 			</p>
-			<p style="margin: 0;">+39 346 7507187</p>
+			<p style="margin: 0;">+39 340 2100166</p>
 			<p style="margin: 0; padding-bottom: 1rem;"></p>
 			<p style="">Di base a Verona, online ovunque.</p>
 			<div
